<resources>
    <string name="app_name">BookTracker</string>

    <string name="back">Back</string>
    <string name="rate">Rate the book</string>
    <string name="authored">Authored by....</string>
    <string name="author">Author</string>
    <string name="namebook">Name the book</string>
    <string name="viewbooks">View added books</string>
    <string name="addbook">Add a book</string>
    <string name="save">Save entry</string>
    <string name="note">Note</string>
</resources>
