<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingBottom="0dp"
    tools:context="com.jw.booktracker.AddActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:columnCount="1"
        android:rowCount="4">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Title"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/booktitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:enabled="true"
            android:gravity="bottom"
            android:hint="@string/namebook"
            android:inputType="text"
            android:lines="2"
            android:maxLines="2"
            android:textSize="20sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/author"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:background="#fff"
            android:enabled="true"
            android:gravity="bottom"
            android:hint="@string/authored"
            android:inputType="text"
            android:lines="2"
            android:maxLines="2"
            android:singleLine="false"
            android:textSize="20sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rate"
            android:textColor="@color/white" />

        <RatingBar
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="false"
            android:numStars="5"
            android:stepSize="1" />

        <Button
            android:id="@+id/saveDbButton"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:text="@string/save" />

        <Button
            android:id="@+id/backbtn"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:text="@string/back" />
    </GridLayout>
</RelativeLayout>
